2017-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Add possibly forgotten braces.

2017-01-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Support Exif tags 0x5110, 0x5111, and 0x5112 in order to
	avoid warnings for some kind of jpeg images. Changes are borrowed from
	writejpg.w by Luigi in the recent LuaTeX.

2016-12-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* cid_basefont.h: Add data for STHeiti-Regular-Acro, and correct
	several data.

2016-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c, dvi.h, dvipdfmx.c, mpost.c, pdfencoding.c, pdfobj.c,
	pdfparse.c, pdfparse.h, tt_cmap.c, type0.c, type1.c, vf.c, xbb.c:
	Merge libdpx by Clerk Ma at https://github.com/clerkma/ptex-ng.

2016-10-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdffont.c, pdfobj.h: Use (time_t)-1 for INVALID_EPOCH_VALUE.

2016-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Use PATH_MAX instead of _MAX_PATH.

2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Sync with MikTeX.

2016-06-25  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	Modify to make PDF/A generation a bit easier.
	* pdfobj.c: Do not compress XMP Metadata.
	* cidtype2.c, type1.c, type1c.c: Always write CIDSet for CIDType2 and
	CharSet for Type1 font. Check consistency of glyph width.

2016-06-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Disable overriding "D" option setting from
	dvipdfmx:config special.
	* configure.ac: Change version from 20160307 to 20160619 in order to
	distinguish the new one from that in TeX Live 2016.

2016-05-20  Karl Berry  <karl@tug.org>

	* Version 20160307 for TeX Live 2016.

2016-05-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* cidtype2.c: Fix bugs in horizontal-vertical mixed scripts by
	TrueType fonts.

2016-05-08  Masamichi HOSODA  <trueroad@trueroad.jp>

	* dvi.c, dvipdfmx.c, dvipdfmx.h, special.c: Add new specials to handle
	command line options.